kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team4-frontend-deployment
  labels:
    app: team4-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: team4-frontend
  template:
    metadata:
      labels:
        app: team4-frontend
    spec:
      containers:
        - name: team4-frontend-container
          image: acrretreat2025.azurecr.io/team-4/frontend:latest
          ports:
            - containerPort: 80
