kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team4-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: team4-frontend
  ports:
    - port: 80
      targetPort: 80
